# merkle-airdrop

./: .gitignore  Cargo.toml  README.md
examples/: schema.rs
helpers/: README.md
helpers/src/commands/: generateProofs.ts  generateRoot.ts
src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
testdata/: airdrop_stage_1_list.json  airdrop_stage_2_list.json
