[package]
name = "merkle-airdrop"
version = "0.1.0"
authors = ["Orkun Kulce <orkunkl@users.noreply.github.com>", "Terraform Labs, PTE."]
edition = "2021"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "1.0.2"
cw2 = "1.1.1"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
thiserror = "1.0.50"
hex = "0.4.3"
sha2 = { version = "0.10.8", default-features = false }
ripemd = "0.1.3"
bech32 = "0.9.1"
cosmwasm-schema = "1.5.0"
